--- a/CódigoFuente/BitacorasProduccion/Views/IT_asignacion_hardware/CargarResponsiva.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/IT_asignacion_hardware/CargarResponsiva.cshtml
@@ -99,6 +99,8 @@
                             @Html.HiddenFor(model => model.id_it_inventory_item)
                             @Html.HiddenFor(model => model.id_empleado)
                             @Html.HiddenFor(model => model.id_sistemas)
+                            @Html.HiddenFor(model => model.es_asignacion_actual)
+                            @Html.HiddenFor(model => model.id_responsable_principal)
 
                             <input type="hidden" name="cambio_documento_soporte" id="cambio_documento" value="0" />
 
@@ -123,8 +125,8 @@
                             <div class="item form-group">
                                 @Html.LabelFor(model => model.id_sistemas, new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
                                 <div class="col-md-6 col-sm-6 ">
-                                    <input type="text" class="form-control" value="@Html.DisplayFor(model => model.empleados1.ConcatNombre)" readonly />
-                                </div>                              
+                                    <input type="text" class="form-control" value="@Html.DisplayFor(model => model.empleados2.ConcatNombre)" readonly />
+                                </div>
                             </div>
                             <div class="item form-group">
                                 @Html.LabelFor(model => model.id_empleado, new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
