--- a/CódigoFuente/BitacorasProduccion/Views/IT_inventory_items/Create.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/IT_inventory_items/Create.cshtml
@@ -36,6 +36,14 @@
                         <div class="clearfix"></div>
                     </div>
                     <div class="x_content">
+
+                        @if (ViewBag.EsClone!=null)
+                        {
+                            <div class="alert alert-info" role="alert">
+                                Se est&aacute; creando un nuevo registro, a partir de un registro existente.
+                            </div>
+                        }
+
                         @*Indica que los mensajes de validación son en ingles*@
                         <input type="hidden" id="jquery_val_english" name="jquery_val_english" value="true" />
                         @using (Html.BeginForm(null, null, FormMethod.Post, new { @class = "form-horizontal form-label-left" }))
@@ -82,6 +90,18 @@
                                         </div>
                                     </div>
                                 }
+
+                                @if (FiltersInventoryUtil.AplicaCampo(FiltersInventoryTypes.EDICION, type.id.ToString(), nameof(IT_inventory_items.physical_server)))
+                                {
+                                    <div class="form-group col-md-4">
+                                        @Html.LabelFor(model => model.physical_server, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
+                                        <div class="col-md-9 col-sm-9 ">
+                                            @Html.DropDownList("physical_server", null, htmlAttributes: new { @class = "form-control select2bs4", @style = "width:100%", @required = "required" })
+                                            @Html.ValidationMessageFor(model => model.physical_server, "", new { @class = "text-danger" })
+                                        </div>
+                                    </div>
+                                }
+
                                 @if (FiltersInventoryUtil.AplicaCampo(FiltersInventoryTypes.EDICION, type.id.ToString(), nameof(IT_inventory_items.hostname)))
                                 {
                                     <div class="form-group col-md-4">
@@ -93,6 +113,16 @@
                                     </div>
                                 }
 
+                                @if (FiltersInventoryUtil.AplicaCampo(FiltersInventoryTypes.EDICION, type.id.ToString(), nameof(IT_inventory_items.descripcion)))
+                                {
+                                    <div class="form-group col-md-4">
+                                        @Html.LabelFor(model => model.descripcion, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
+                                        <div class="col-md-9 col-sm-9 ">
+                                            @Html.EditorFor(model => model.descripcion, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
+                                            @Html.ValidationMessageFor(model => model.descripcion, "", new { @class = "text-danger" })
+                                        </div>
+                                    </div>
+                                }
                                 @if (FiltersInventoryUtil.AplicaCampo(FiltersInventoryTypes.EDICION, type.id.ToString(), nameof(IT_inventory_items.brand)))
                                 {
                                     <div class="form-group col-md-4">
