--- a/CódigoFuente/BitacorasProduccion/Views/IT_inventory_items/Details.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/IT_inventory_items/Details.cshtml
@@ -75,12 +75,30 @@
                                     </div>
                                 </div>
                             }
+                            @if (FiltersInventoryUtil.AplicaCampo(FiltersInventoryTypes.EDICION, Model.IT_inventory_hardware_type.id.ToString(), nameof(IT_inventory_items.physical_server)))
+                            {
+                                <div class="form-group col-md-4">
+                                    @Html.LabelFor(model => model.physical_server, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
+                                    <div class="col-md-9 col-sm-9 ">
+                                        <input class="form-control" value=" @Html.DisplayFor(model => model.IT_inventory_items2.ConcatInfoGeneral)" readonly="readonly" />
+                                    </div>
+                                </div>
+                            }
                             @if (FiltersInventoryUtil.AplicaCampo(FiltersInventoryTypes.EDICION, Model.IT_inventory_hardware_type.id.ToString(), nameof(IT_inventory_items.hostname)))
                             {
                                 <div class="form-group col-md-4">
                                     @Html.LabelFor(model => model.hostname, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
                                     <div class="col-md-9 col-sm-9 ">
                                         @Html.EditorFor(model => model.hostname, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off", @readonly = "readonly" } })
+                                    </div>
+                                </div>
+                            }
+                            @if (FiltersInventoryUtil.AplicaCampo(FiltersInventoryTypes.EDICION, Model.IT_inventory_hardware_type.id.ToString(), nameof(IT_inventory_items.descripcion)))
+                            {
+                                <div class="form-group col-md-4">
+                                    @Html.LabelFor(model => model.descripcion, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
+                                    <div class="col-md-9 col-sm-9 ">
+                                        @Html.EditorFor(model => model.descripcion, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off", @readonly = "readonly" } })
                                     </div>
                                 </div>
                             }
@@ -256,7 +274,7 @@
                                 <div class="form-group col-md-4">
                                     @Html.LabelFor(model => model.total_physical_memory_gb, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
                                     <div class="col-md-9 col-sm-9 ">
-                                        @Html.EditorFor(model => model.total_physical_memory_gb, new { htmlAttributes = new { @class = "form-control", @readonly="readonly" } })
+                                        @Html.EditorFor(model => model.total_physical_memory_gb, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
                                     </div>
                                 </div>
                             }
