--- a/CódigoFuente/BitacorasProduccion/Views/IT_asignacion_hardware/Asignar.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/IT_asignacion_hardware/Asignar.cshtml
@@ -80,6 +80,11 @@
                                         <dd class="col-sm-2">@Html.DisplayFor(model => model.empleados.Area.descripcion)</dd>
                                         <dt class="col-sm-2">@Html.DisplayNameFor(model => model.empleados.puesto)</dt>
                                         <dd class="col-sm-2">@Html.DisplayFor(model => model.empleados.puesto1.descripcion)</dd>
+                                        @foreach (var linea in Model.empleados.IT_asignacion_cellular_line.Where(x => x.es_asignacion_actual == true))
+                                        {
+                                            <dt class="col-sm-2">@Html.DisplayNameFor(model => linea.IT_inventory_cellular_line.numero_celular)</dt>
+                                            <dd class="col-sm-2">@Html.DisplayFor(model => linea.IT_inventory_cellular_line.numero_celular)</dd>
+                                        }
                                         <dt class="col-sm-2">@Html.DisplayNameFor(model => model.empleados.activo)</dt>
                                         <dd class="col-sm-2">
                                             @if (Model.empleados.activo.HasValue && Model.empleados.activo.Value)
@@ -117,8 +122,8 @@
                             </div>
 
                             <div id="aviso_nuevo_responsable" class="alert alert-warning" role="alert" style="color:#454545; display:none">
-                                <i class="fa-solid fa-warning"></i> Actualmente este equipo tiene una responsiva activa, pero el responsable principal ya no está asociado a esta. 
-                                Al continuar (Si se trata de una asignación actual), se crear&aacute; una nueva responsiva para todos los usuarios asociados actualmente a este equipo, con este usuario como Responsable Principal. 
+                                <i class="fa-solid fa-warning"></i> Actualmente este equipo tiene una responsiva activa, pero el responsable principal ya no está asociado a esta.
+                                Al continuar (Si se trata de una asignación actual), se crear&aacute; una nueva responsiva para todos los usuarios asociados actualmente a este equipo, con este usuario como Responsable Principal.
                             </div>
 
                             <div class="form-group row">
@@ -147,11 +152,30 @@
                                     <input id="responsable" type="text" class="form-control" value="PENDIENTE" readonly />
                                 </div>
                             </div>
+
+                            <div class="item form-group">
+                                <label class="control-label col-md-2 col-sm-2" for="tipo_hardware" style="text-align:right">Type:</label>
+                                <div class="col-md-3 col-sm-3 ">
+                                    @Html.DropDownList("tipo_hardware", null, htmlAttributes: new { @class = "form-control select2bs4", @style = "width:100%", @disabled = "true" })
+                                    @Html.ValidationMessageFor(model => model.tipo_hardware, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
+
+                            if (tipoHardware.descripcion == Bitacoras.Util.IT_Tipos_Hardware.SMARTPHONE)
+                            {
+                                <div class="item form-group">
+                                    @Html.LabelFor(model => model.id_inventory_cellular_line, new { @class = "col-form-label col-md-2 col-sm-2 label-align" })
+                                    <div class="col-md-6 col-sm-6 ">
+                                        @Html.DropDownList("id_inventory_cellular_line", null, htmlAttributes: new { @class = "form-control select2bs4", @style = "width:100%" })
+                                        @Html.ValidationMessageFor(model => model.id_inventory_cellular_line, "", new { @class = "text-danger" })
+                                    </div>
+                                </div>
+                            }
                             <div class="item form-group">
 
                                 @Html.LabelFor(model => model.id_it_inventory_item, new { @class = "col-form-label col-md-2 col-sm-2 label-align" })
                                 <div class="col-md-6 col-sm-6 ">
-                                    @Html.DropDownList("id_it_inventory_item", null, htmlAttributes: new { @class = "form-control select2bs4", @style = "width:100%" })
+                                    @Html.DropDownList("id_it_inventory_item", null, htmlAttributes: new { @class = "form-control select2bs4", @style = "width:100%", @required = "required"  })
                                     @Html.ValidationMessageFor(model => model.id_it_inventory_item, "", new { @class = "text-danger" })
                                 </div>
                                 <div class="col-md-1 col-sm-1">
@@ -164,7 +188,6 @@
                                     @Html.EditorFor(model => model.es_asignacion_actual, new { htmlAttributes = new { @class = "form-control" } })
                                 </div>
                             </div>
-
 
                             <div class="ln_solid"></div>
                             <div class="item form-group">
@@ -198,7 +221,7 @@
     @Scripts.Render(Url.Content("~/Content/vendors/sweetalert2/sweetalert2.min.js"))
     <!-- iCheck -->
     @Scripts.Render(Url.Content("~/Content/vendors/iCheck/icheck.min.js"))
-<script>
+    <script>
         $(document).ready(function () {
             // Initialize Select2 Elements (debe ir después de asignar el valor)
             $('.select2bs4').select2({
@@ -221,9 +244,27 @@
                 $('#responsable').val($('#empleado').val());
             });
 
+            //funcion para aactualizar el combo de descripcion de hardware
+            $("#@Html.IdFor(model => model.tipo_hardware)").change(function () {
+                //llamada ajax para obtener los items disponibles
+                $.ajax({
+                    type: 'POST',
+                    url: '/Combos/obtieneDescripcionInventoryItem',
+                    data: { id_tipo_hardware: $(this).val() },
+                    success: function (data) {
+                        console.log(data);
+                        populateDropdown($("#id_it_inventory_item"), data);
+                        //funcion para comprobar si alguién ya esta asignado al harware
+                        $("#@Html.IdFor(model => model.id_it_inventory_item)").change();
+                    },
+                    async: false
+                });
+            });
+
+            //funcion para comprobar si alguién ya esta asignado al harware
             $("#@Html.IdFor(model => model.id_it_inventory_item)").change(function () {
 
-                //llamada ajax para obtener las lineas por planta
+                //llamada ajax para obtener el detalle del item  seleccionado
                 $.ajax({
                     type: 'POST',
                     url: '/Combos/InventoryItemDetails',
@@ -315,8 +356,19 @@
             });
 
         }
+
+        //completa el selec con los datos recibidos
+        function populateDropdown(select, data) {
+
+            select.html('');
+            $.each(data, function (id, option) {
+
+                select.append($('<option></option>').val(option.value).html(option.name));
+            });
+        }
         window.onload = function () {
             clicMenu(1);
         }
-</script>
+
+    </script>
 }
