--- a/CódigoFuente/BitacorasProduccion/Views/IT_inventory_items/Create.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/IT_inventory_items/Create.cshtml
@@ -9,7 +9,7 @@
     ViewBag.PrimerNivel = "sistemas";
     ViewBag.SegundoNivel = "it_inventory_hardware";
     ViewBag.ControllerName = "IT_inventory_items";
-   
+
 
     int contador = 100;
 }
@@ -37,7 +37,7 @@
                     </div>
                     <div class="x_content">
 
-                        @if (ViewBag.EsClone!=null)
+                        @if (ViewBag.EsClone != null)
                         {
                             <div class="alert alert-info" role="alert">
                                 Se est&aacute; creando un nuevo registro, a partir de un registro existente.
@@ -113,13 +113,13 @@
                                     </div>
                                 }
 
-                                @if (FiltersInventoryUtil.AplicaCampo(FiltersInventoryTypes.EDICION, type.id.ToString(), nameof(IT_inventory_items.descripcion)))
+                                @if (FiltersInventoryUtil.AplicaCampo(FiltersInventoryTypes.EDICION, type.id.ToString(), nameof(IT_inventory_items.id_tipo_accesorio)))
                                 {
                                     <div class="form-group col-md-4">
-                                        @Html.LabelFor(model => model.descripcion, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
+                                        @Html.LabelFor(model => model.id_tipo_accesorio, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
                                         <div class="col-md-9 col-sm-9 ">
-                                            @Html.EditorFor(model => model.descripcion, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
-                                            @Html.ValidationMessageFor(model => model.descripcion, "", new { @class = "text-danger" })
+                                            @Html.DropDownList("id_tipo_accesorio", null, htmlAttributes: new { @class = "form-control select2bs4", @style = "width:100%", @required="required" })
+                                            @Html.ValidationMessageFor(model => model.id_tipo_accesorio, "", new { @class = "text-danger" })
                                         </div>
                                     </div>
                                 }
@@ -128,7 +128,7 @@
                                     <div class="form-group col-md-4">
                                         @Html.LabelFor(model => model.brand, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
                                         <div class="col-md-9 col-sm-9 ">
-                                            @Html.EditorFor(model => model.brand, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
+                                            @Html.EditorFor(model => model.brand, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off", @required = "required" } })
                                             @Html.ValidationMessageFor(model => model.brand, "", new { @class = "text-danger" })
                                         </div>
                                     </div>
@@ -269,7 +269,7 @@
                                 }
                                 @if (FiltersInventoryUtil.AplicaCampo(FiltersInventoryTypes.EDICION, type.id.ToString(), nameof(IT_inventory_items.inches)))
                                 {
-                                    <div class="form-group col-md-4">
+                                    <div id="inches" class="form-group col-md-4">
                                         @Html.LabelFor(model => model.inches, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
                                         <div class="col-md-9 col-sm-9 ">
                                             @Html.EditorFor(model => model.inches, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
@@ -480,12 +480,12 @@
                 <div>
                     <br />
                     <a href="@Url.Action("Index", ViewBag.ControllerName, new {
-                            tipo_hardware = type.id, 
-                            id_planta = Model.filtro_id_planta, 
-                            model = Model.filtro_model, 
+                            tipo_hardware = type.id,
+                            id_planta = Model.filtro_id_planta,
+                            model = Model.filtro_model,
                             active = Model.filtro_activo,
                             hostname = Model.filtro_hostname,
-                            pagina = Model.filtro_pagina 
+                            pagina = Model.filtro_pagina
                         })" class="btn btn-round btn-info btm-sm" title="Volver">
                         <i class="fa fa-arrow-circle-left"></i> Back to List
                     </a>
@@ -504,7 +504,7 @@
     <!-- input mask -->
     @Scripts.Render(Url.Content("~/Content/vendors/jquery.inputmask/dist/jquery.inputmask.bundle.js"))
     @Scripts.Render(Url.Content("~/Content/vendors/jquery.inputmask/dist/inputmask/inputmask.extensions.js"))
-<script>
+    <script>
         $(document).ready(function () {
 
             // Initialize Select2 Elements (debe ir después de asignar el valor)
@@ -519,6 +519,10 @@
                 increaseArea: '20%' // optional
             });
 
+            //evento cada vez que hay un cambio en id_accessory_type
+            $("#@Html.IdFor(model => model.id_tipo_accesorio)").change(function () {
+                verificaCombos();
+            });
 
             //eventos input
             $('input').on('ifChecked', function (event) {
@@ -610,6 +614,16 @@
                 //$('#inactive_date').val('');
             }
 
+         
+            //inches
+            var tipo_accesorio = $('#@Html.IdFor(model => model.id_tipo_accesorio) option:selected').text();
+
+            if (tipo_accesorio != null && tipo_accesorio.toUpperCase().includes("MONITOR")) {
+                $('#inches').show(300);
+            } else if (tipo_accesorio != null) {
+                $('#inches').hide(300);
+            }
+              
         }
 
 
@@ -687,6 +701,6 @@
         window.onload = function () {
             clicMenu(1);
         }
-</script>
+    </script>
 }
 
