--- a/CódigoFuente/BitacorasProduccion/Views/IT_inventory_items/Edit.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/IT_inventory_items/Edit.cshtml
@@ -103,13 +103,13 @@
                                         </div>
                                     </div>
                                 }
-                                @if (FiltersInventoryUtil.AplicaCampo(FiltersInventoryTypes.EDICION, type.id.ToString(), nameof(IT_inventory_items.descripcion)))
+                                @if (FiltersInventoryUtil.AplicaCampo(FiltersInventoryTypes.EDICION, type.id.ToString(), nameof(IT_inventory_items.id_tipo_accesorio)))
                                 {
                                     <div class="form-group col-md-4">
-                                        @Html.LabelFor(model => model.descripcion, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
+                                        @Html.LabelFor(model => model.id_tipo_accesorio, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
                                         <div class="col-md-9 col-sm-9 ">
-                                            @Html.EditorFor(model => model.descripcion, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
-                                            @Html.ValidationMessageFor(model => model.descripcion, "", new { @class = "text-danger" })
+                                            @Html.DropDownList("id_tipo_accesorio", null, htmlAttributes: new { @class = "form-control select2bs4", @style = "width:100%" })
+                                            @Html.ValidationMessageFor(model => model.id_tipo_accesorio, "", new { @class = "text-danger" })
                                         </div>
                                     </div>
                                 }
@@ -119,7 +119,7 @@
                                     <div class="form-group col-md-4">
                                         @Html.LabelFor(model => model.brand, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
                                         <div class="col-md-9 col-sm-9 ">
-                                            @Html.EditorFor(model => model.brand, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
+                                            @Html.EditorFor(model => model.brand, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off", @required="required" } })
                                             @Html.ValidationMessageFor(model => model.brand, "", new { @class = "text-danger" })
                                         </div>
                                     </div>
@@ -260,7 +260,7 @@
                                 }
                                 @if (FiltersInventoryUtil.AplicaCampo(FiltersInventoryTypes.EDICION, type.id.ToString(), nameof(IT_inventory_items.inches)))
                                 {
-                                    <div class="form-group col-md-4">
+                                    <div id ="inches" class="form-group col-md-4">
                                         @Html.LabelFor(model => model.inches, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
                                         <div class="col-md-9 col-sm-9 ">
                                             @Html.EditorFor(model => model.inches, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
@@ -520,6 +520,11 @@
                 verificaCombos();
             });
 
+              //evento cada vez que hay un cambio en id_accessory_type
+            $("#@Html.IdFor(model => model.id_tipo_accesorio)").change(function () {
+                verificaCombos();
+            });
+
                         //inicializa input mask
              $('#@Html.IdFor(model => model.total_physical_memory_mb)').inputmask({ 'alias': 'decimal', 'groupSeparator': ',', 'autoGroup': true, 'digits': 2, 'digitsOptional': false, 'suffix': ' MB', 'placeholder': '0', 'autoUnmask': true, 'removeMaskOnSubmit': true  });
              $('#@Html.IdFor(model => model.total_physical_memory_gb)').inputmask({ 'alias': 'decimal', 'groupSeparator': ',', 'autoGroup': true, 'digits': 2, 'digitsOptional': false, 'suffix': ' GB', 'placeholder': '0', 'autoUnmask': true, 'removeMaskOnSubmit': true  });
@@ -601,6 +606,15 @@
                 //$('#inactive_date').val('');
             }
 
+
+             //inches
+            var tipo_accesorio = $('#@Html.IdFor(model => model.id_tipo_accesorio) option:selected').text();
+
+            if (tipo_accesorio != null && tipo_accesorio.toUpperCase().includes("MONITOR")) {
+                $('#inches').show(300);
+            } else if (tipo_accesorio != null) {
+                $('#inches').hide(300);
+            }
         }
 
 
